# bt_ocean

./: LICENSE  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  readme.rst  search.html  searchindex.js  setup.cfg
.github/workflows/: test-bt_ocean-32.yml  test-bt_ocean-64.yml  test-bt_ocean.yml
_sources/autoapi/bt_ocean/: index.rst.txt
_sources/examples/: 1_keras_integration.ipynb.txt
autoapi/bt_ocean/: index.html
autoapi/bt_ocean/diagnostics/: index.html
autoapi/bt_ocean/fft/: index.html
autoapi/bt_ocean/finite_difference/: index.html
autoapi/bt_ocean/gaussian_filter/: index.html
autoapi/bt_ocean/grid/: index.html
autoapi/bt_ocean/inversion/: index.html
autoapi/bt_ocean/model/: index.html
autoapi/bt_ocean/network/: index.html
autoapi/bt_ocean/parameters/: index.html
autoapi/bt_ocean/precision/: index.html
autoapi/bt_ocean/pytree/: index.html
bt_ocean/: __init__.py  chebyshev.py  diagnostics.py  fft.py  finite_difference.py  gaussian_filter.py  grid.py  inversion.py  model.py  network.py  parameters.py  precision.py  timing.py
docs/source/: conf.py  index.rst
examples/: 0_getting_started.html  0_getting_started.ipynb  1_keras_integration.html  1_keras_integration.ipynb  2_steady_state.html  2_steady_state.ipynb
scripts/: generate_data.py  spinup.py
tests/: test_autodiff.py  test_base.py  test_chebyshev.py  test_diagnostics.py  test_examples.py  test_fft.py  test_finite_difference.py  test_gaussian_filter.py  test_grid.py  test_inverse.py  test_io.py  test_network.py  test_steady_state.py
(+16 files in other folders)
