[project]

name = "bt_ocean"
version = "0.9.0"
description = "Differentiable GPU capable barotropic vorticity solver using JAX, for rapid testing of online training algorithms"
readme = "readme.rst"
authors = [
    {name="James R. Maddison", email="j.r.maddison@ed.ac.uk"}
]
classifiers = [
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "jax",
    "keras",
    "numpy",
    "sympy"
]
optional-dependencies.test = [
    "h5py",
    "matplotlib",
    "pytest",
    "scipy",
    "zarr"
]
optional-dependencies.lint = [
    "flake8",
    "ruff"
]

[tool.ruff]

line-length = 79

[tool.ruff.lint]

ignore = ["E402", "E501", "E741", "N802", "N803", "N806"]
preview = true
select = ["E", "EXE", "F", "N", "PIE", "UP", "W"]
